--- a/home.html
+++ b/home.html
@@ -5,8 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creta Home Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+<img src="images/Creta Logo.jpg" alt="">   
+
+<a href="home.html" class="navbar">Home</a>
+<a href="#" class="navbar">Contact</a>
+
+
+<article class="inlog">
+<form action="#" method="post">
+        <div class="container">
+      <label for="uname"><b>Username</b></label>
+      <input type="text" placeholder="Enter Username" name="uname" required><br>
+  
+      <label for="psw"><b>Password</b></label>
+      <input type="password" placeholder="Enter Password" name="psw" required><bR>
+  
+      <button type="submit">Login</button>
     
+    </div>
+  
+
+
+     
+    </div>
+  </form>
+
+</article>
+    </header>
 </body>
 </html>
